.metals/.reports/metals/2023-09-04/r_scala-toplevel-mtags_21-50-41-222
id: file:///C:/Users/Saffy%20Yawar/Scala-Chisel-Learning-Journey/src/test/scala/gcd/single_cycle/IMtester.scala:[157..164) in Input.VirtualFile("file:///C:/Users/Saffy%20Yawar/Scala-Chisel-Learning-Journey/src/test/scala/gcd/single_cycle/IMtester.scala", "package single_cycle

import chisel3._
 import chisel3.tester._
 import org.scalatest.FreeSpec
 import chisel3.experimental.BundleLiterals._

 class  extends FreeSpec with ChiselScalatestTester{
    "reg tester file"in{
        test(new  register) {a =>
        a.io.addr.poke(8.U)
        a.io.addr.poke(8.U)





        }
    }
}

")
file:///C:/Users/Saffy%20Yawar/Scala-Chisel-Learning-Journey/src/test/scala/gcd/single_cycle/IMtester.scala:8: error: expected identifier; obtained extends
 class  extends FreeSpec with ChiselScalatestTester{
        ^